k8s/deployment.yaml
# k8s/deployment.yaml -> redis 연결 추가 (AWS Cache v8)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: 051826731133.dkr.ecr.ap-northeast-2.amazonaws.com/cjone-dev:3ea40be
          ports:
            - containerPort: 8080
