k8s/spring-gateway.yaml
# spring-gateway.yaml

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: spring-app-gateway # 앱을 위한 새로운 Gateway 이름
  namespace: default      # default 네임스페이스에 생성
spec:
  selector:
    istio: ingressgateway # 이 부분은 istio-ingressgateway 파드를 가리킴
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*" # 모든 호스트 요청을 받음
