k8s/virtualservice.yaml

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: spring-app
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - spring-app-gateway  # 👈 [수정 1] 올바른 Gateway 이름으로 변경
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: spring-app
            port:
              number: 8080 # 👈 [수정 2] 올바른 Spring Boot 포트로 변경
